--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+                <a class="navbar-brand page-scroll" href="/">
+                    <div class="brand-box">
+                        <div class="brand-img-box">
+                            <img src="{{site.medallion}}" alt="{{ site.title }} - {{ site.company_name }}">
+                        </div>
+                        <div class="brand-text-box">
+                            <p class="brand-text brand-line-1">Local Flavor</p>
+                            <p class="brand-text brand-line-2">Marketing Group, LLC</p>
+                        </div>
+                    </div>
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
