--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,6 +42,7 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
+                    <li><a class="page-scroll" href="#testimonials">Testimonials</a></li>
                     </li>
                 </ul>
             </div>
