Updates navbar and main site background image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,8 @@
                         <div class="brand-img-box">
                             <img src="{{site.medallion}}" alt="{{ site.title }} - {{ site.company_name }}">
                         </div>
-                        <div class="brand-text-box">
-                            <p class="brand-text brand-line-1">Local Flavor</p>
-                            <p class="brand-text brand-line-2">Marketing Group, LLC</p>
-                        </div>
+                        <p class="brand-text brand-line-1">Local Flavor</p>
+                        <p class="brand-text brand-line-2">Marketing Group, LLC</p>
                     </div>
                 </a>
             </div>
@@ -28,21 +26,13 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                    <li><a class="page-scroll" href="#services">Services</a></li>
+                    <li><a class="page-scroll" href="#portfolio">Portfolio</a></li>
                     <li><a class="page-scroll" href="#testimonials">Testimonials</a></li>
+                    <!-- <li><a class="page-scroll" href="/posts">Blog</a></li> -->
+                    <!-- <li><a class="page-scroll" href="#about">About</a></li>
+                    <li><a class="page-scroll" href="#team">Team</a> --></li>
+                    <li><a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -66,4 +56,3 @@
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
-
