--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -274,10 +274,10 @@ fieldset[disabled] .btn-xl.active {
     .navbar-default {
         padding: 25px 0;
         border: 0;
-        background-color: transparent;
+        /* background-color: transparent;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
-        transition: padding .3s;
+        transition: padding .3s; */
     }
 
     .navbar-default .navbar-brand {
