--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,20 +3,13 @@
 
   {% include head.html %}
 
+  <body id="page-top" class="index">
+    {% include navbar.html %}
 
-    <body id="page-top" class="index">
+    {{ content }}
 
-    {% include header.html %}
-    {% include services.html %}
-    {% include portfolio_grid.html %}
-    {% include testimonials.html %}
-    {% include about.html %}
-    {% include team.html %}
-    {% include clients.html %}
-    {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
-
-    </body>
+  </body>
 </html>
