WIP Add blog post content

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -769,7 +769,10 @@ section#contact .text-danger {
 
 
 /* Post Layout */
-
+.post-content img {
+  width: 100%;
+  max-width: 600px;
+}
 
 /* Footer Layout */
 
