--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,10 +7,7 @@
 
       <div class="col-md-4">
         <ul class="list-inline quicklinks">
-          <li><a href="#">Privacy Policy</a>
-          </li>
-          <li><a href="#">Terms of Use</a>
-          </li>
+          <li><a href="/privacy_policy">Privacy Policy</a></li>
         </ul>
       </div>
     </div>
