Adds team section

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,6 +29,7 @@
         <li><a class="page-scroll" href="/#services">Services</a></li>
         <li><a class="page-scroll" href="/#portfolio">Portfolio</a></li>
         <li><a class="page-scroll" href="/#testimonials">Testimonials</a></li>
+        <li><a class="page-scroll" href="/#team">Our Team</a></li>
         <li><a class="page-scroll" href="/posts">Blog</a></li>
         <!-- <li><a class="page-scroll" href="/#contact">Contact</a></li> -->
       </ul>
