--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -327,6 +327,7 @@ header .intro-text .intro-lead-in {
     font-size: 22px;
     font-style: italic;
     line-height: 22px;
+    text-shadow: 15px 15px 15px rgba(0,0,0,0.5);
 }
 
 header .intro-text .intro-heading {
@@ -336,6 +337,7 @@ header .intro-text .intro-heading {
     font-size: 50px;
     font-weight: 700;
     line-height: 50px;
+    text-shadow: 15px 15px 15px rgba(0,0,0,0.5);
 }
 
 @media(min-width:768px) {
