Remove email from navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,7 +31,7 @@
         <li><a class="page-scroll" href="/#testimonials">Testimonials</a></li>
         <li><a class="page-scroll" href="/#team">Our Team</a></li>
         <li><a class="page-scroll" href="/posts">Blog</a></li>
-        <li><a href="mailto:{{ site.email }}">Send Email</a></li>
+        <!-- <li><a href="mailto:{{ site.email }}">Send Email</a></li> -->
         <!-- <li><a class="page-scroll" href="/#contact">Contact</a></li> -->
       </ul>
     </div>
